# gsx2jsonpp

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.ps1  Dockerfile.sh  README.md  docker-compose.yml  supervisor.conf  vckpg.json
.github/: vcpkg-x64-linux-dependencies
.github/workflows/: cmake_tests.yml  create_image.yml  create_release.yml  remove_old_artifacts.yml  test_out.yml  tests.yml  vcpkg-x64-osx-dependencies
benchmark/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  main.cpp
dependencies/: vcpkg-x64-linux.txt  vcpkg-x64-osx.txt  vcpkg-x64-windows.txt  vcpkg-x86-windows.txt
scripts/: build.ps1  build.sh  build_docker_image.ps1  build_docker_image.sh  launch_docker_image.ps1  launch_docker_image.sh
src/: cache.cpp  cache.h  gsx2json.cpp  gsx2json.h  gxs2json.cpp  gxs2json.h  main.cpp  utils.cpp  utils.h
test/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  main.cpp
